# iced-screen

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/greeting-app/: main.rs
examples/greeting-app/common/: router.rs  style.rs
examples/greeting-app/common/messages/: route.rs  screen.rs
examples/greeting-app/screens/greeting/: screen.rs  state.rs  view.rs
examples/greeting-app/screens/input/: screen.rs  state.rs  view.rs
iced-app/: Cargo.toml
iced-app/src/: app.rs  screen.rs
iced-screen/: Cargo.toml
iced-screen/src/: screen.rs
routing/: Cargo.toml
routing/src/: app.rs  lib.rs  message.rs  router.rs  screen.rs
src/: app.rs  main.rs  message.rs  router.rs  screen.rs
src/common/: mod.rs  router.rs  style.rs
src/common/messages/: mod.rs
src/screens/: mod.rs
src/screens/greeting/: message.rs  mod.rs  screen.rs  state.rs  view.rs
src/screens/input/: message.rs  mod.rs  screen.rs  state.rs  view.rs
