[package]
name = "iced-routing-poc"
version = "0.1.0"
authors = ["Łukasz Wolańczyk <wolanczyk.lukasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
iced = "0.3.0"
routing = { path = "routing" }
